--- a/requirements_common.txt
+++ b/requirements_common.txt
@@ -1,18 +1,7 @@
-bs4
 gym
-keras==2.2.4
-lxml
+jupyter
 matplotlib
-numpy
-opencv-python
-pandas
-pyvista
-pydmd
-pyyaml
+pyqt5
 scikit-learn
 scikit-optimize
-scipy
-seaborn
-tensorflow<2
-tensorflow-gpu<2
-tqdm
+tensorflow
